многопоточность в полном сканировании